@@ -1,3 +1,7 @@
+2008-09-23 Christof Damian  <christof@damian.net>
+	
+	* new "mergemonth" option for the month, months and year view
+
 2008-09-16 	Christof Damian  <christof@damian.net>
 
 	* new "weeks" view
